@@ -1,4 +1,5 @@
 0.1.1
+Added tabbed prefs dialog.
 Auto set window title in notebook/richtext/textfile if not specified on cli.
 More sensible default sizes for dialogs if width/height not set on cli.
 Prefsdialog type size can be overridden by setting both --width AND --height.
